# COP3331-Final-Project

./: README.md  report.docx  runproject.bash
myprogram/: CMakeLists.txt
myprogram/Data/: scores.txt
myprogram/src/: FinalProject.h  main.cpp
myprogram/src/commands/: CommandAvgScoreOfExam.h  CommandAvgScoreOfStudent.h  CommandChangePassword.h  CommandCreateNewUser.h  CommandCurveExamScores.h  CommandDisplayScoresOfExam.h  CommandDisplayScoresOfStudent.h  CommandInsertNewStudent.h  CommandInsertScoresNewExamAll.h  CommandUpdateStudentExamScore.h
myprogram/src/commands/types/: AuthenticatedCommand.h  Command.h
myprogram/src/databases/: AuthenticationDatabase.cpp  AuthenticationDatabase.h  StudentDatabase.cpp  StudentDatabase.h
myprogram/src/objects/: Pwdg.h  Student.h  User.h
